preprocessing of adni dataset

--- a/preprocessing/DEMO_preprocess.ipynb
+++ b/preprocessing/DEMO_preprocess.ipynb
@@ -19,15 +19,17 @@
     "- Gender, height, weight completely missing so dropped from dataset\n",
     "- No patients to exclude from dataset\n",
     "- Dropped exclude column\n",
+    "- Patients with AD: 1019, Patients without AD: 3440\n",
     "### Sheffield\n",
     "- 104 records, 8 features\n",
     "- 3 patients to exclude, dropped from dataframe\n",
-    "- Dropped exclude column"
+    "- Dropped exclude column\n",
+    "- Patients with AD: 32, Patients without AD: 69"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,8 +38,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ADNI DATA"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -61,24 +70,23 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\"\"\"\n",
-    "ADNI Demo Dataset\n",
     "Check for NAN values\n",
     "\"\"\"\n",
-    "df = pd.read_csv('datasets/adni_data/ADNI_Demo.csv')\n",
+    "df = pd.read_csv('../datasets/adni_data/ADNI_Demo.csv')\n",
     "print(df.shape)\n",
     "df.isnull().sum().sort_values(ascending=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -112,14 +120,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Patients exluded: 0\n"
+      "Patients excluded: 0\n"
      ]
     },
     {
@@ -261,7 +269,7 @@
        "[4459 rows x 5 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +289,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Patients with AD: 1019\n",
+      "Patients without AD: 3440\n",
+      "Total patients: 4459\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check how many patients have AD/don't have AD\n",
+    "have_ad = df[df[\"AD\"] == 1].count()[0]\n",
+    "print(f\"Patients with AD: {have_ad}\")\n",
+    "no_ad = df[df[\"AD\"] == 0].count()[0]\n",
+    "print(f\"Patients without AD: {no_ad}\")\n",
+    "print(f\"Total patients: {no_ad+have_ad}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +443,7 @@
        "[4459 rows x 4 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +458,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write to new preprocessed file\n",
+    "df.to_csv('../preprocessed_data/ADNI_DEMO.csv', encoding='utf-8', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SHEFFIELD DATA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -450,24 +499,23 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\"\"\"\n",
-    "Sheffield Demo Dataset\n",
     "Check for NAN values\n",
     "\"\"\"\n",
-    "df = pd.read_csv('datasets/sheffield_data/SHEF_Demo.csv')\n",
+    "df = pd.read_csv('../datasets/sheffield_data/SHEF_Demo.csv')\n",
     "print(df.shape)\n",
     "df.isnull().sum().sort_values(ascending=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +700,7 @@
        "[101 rows x 8 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +886,7 @@
        "[101 rows x 7 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,6 +897,30 @@
     "\"\"\"\n",
     "df = df.drop(['Exclude'], axis=1)\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Patients with AD: 32\n",
+      "Patients without AD: 69\n",
+      "Total patients: 101\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check how many patients have AD/don't have AD\n",
+    "have_ad = df[df[\"AD\"] == 1].count()[0]\n",
+    "print(f\"Patients with AD: {have_ad}\")\n",
+    "no_ad = df[df[\"AD\"] == 0].count()[0]\n",
+    "print(f\"Patients without AD: {no_ad}\")\n",
+    "print(f\"Total patients: {no_ad+have_ad}\")"
    ]
   }
  ],
