--- a/preprocessing/NEURO_preprocess.ipynb
+++ b/preprocessing/NEURO_preprocess.ipynb
@@ -33,6 +33,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ADNI DATA"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
