--- a/preprocessing/ASL_preprocess.ipynb
+++ b/preprocessing/ASL_preprocess.ipynb
@@ -1,16 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -18,14 +8,24 @@
     "- An MRI desrived mean perfusion values for different brain regions\n",
     "\n",
     "## Summary\n",
-    "ADNI\n",
+    "### ADNI\n",
     "* 4459 records, 138 labels\n",
     "* 4459 records missing from dataset (all NAN)\n",
     "\n",
-    "SHEFFIELD\n",
+    "### SHEFFIELD\n",
     "* 104 records, 138 labels\n",
     "* 6 rows contain all NAN values\n",
     "* Removed rows, 98 records"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
