--- a/archive/DEMO_preprocess.ipynb
+++ b/archive/DEMO_preprocess.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
        "[4459 rows x 5 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,8 @@
      "output_type": "stream",
      "text": [
       "Patients with AD: 1019\n",
-      "Patients without AD: 3440\n",
+      "Patients with MCI: 2093\n",
+      "Patients without AD: 1347\n",
       "Total patients: 4459\n"
      ]
     }
@@ -306,14 +307,25 @@
     "# Check how many patients have AD/don't have AD\n",
     "have_ad = df[df[\"AD\"] == 1].count()[0]\n",
     "print(f\"Patients with AD: {have_ad}\")\n",
-    "no_ad = df[df[\"AD\"] == 0].count()[0]\n",
+    "have_mci = df[df[\"MCI\"] == 1].count()[0]\n",
+    "print(f\"Patients with MCI: {have_mci}\")\n",
+    "no_ad = df['ID'].count() - (have_mci+have_ad)\n",
     "print(f\"Patients without AD: {no_ad}\")\n",
-    "print(f\"Total patients: {no_ad+have_ad}\")"
+    "print(f\"Total patients: {no_ad+have_mci+have_ad}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Average age for each patient with AD, MCI and HC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +455,7 @@
        "[4459 rows x 4 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +511,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +712,7 @@
        "[101 rows x 8 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +898,7 @@
        "[101 rows x 7 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -901,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
