--- a/preprocessing/ADNI_preprocessing.ipynb
+++ b/preprocessing/ADNI_preprocessing.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,14 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def save_single_dataset(filename, df, label):\n",
+    "def save_single_dataset(path, df, label):\n",
     "    df[label] = pd.Series(demo_df[label])\n",
     "    df = df.drop(columns='ID')\n",
-    "    df.to_csv(f'single_modality/{filename}.csv', encoding='utf-8', index=False)"
+    "    df.to_csv(f'{path}.csv', encoding='utf-8', index=False)"
    ]
   },
   {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
        "[4459 rows x 5 columns]"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
        "[4459 rows x 4 columns]"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2425,7 +2425,7 @@
        "[4459 rows x 109 columns]"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2437,7 +2437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -3093,7 +3093,7 @@
        "[4459 rows x 37 columns]"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3106,7 +3106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -3135,7 +3135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3145,7 +3145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -3789,7 +3789,7 @@
        "[4459 rows x 36 columns]"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3800,7 +3800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3821,12 +3821,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "adnc_mri_df = mri_df.copy()\n",
-    "save_single_dataset('sMRI_AD_NC', adnc_mri_df, 'AD')"
+    "save_single_dataset('../training/AD_NC/data/sMRI_AD_NC', adnc_mri_df, 'AD')"
    ]
   },
   {
@@ -3838,12 +3838,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "mcinc_mri_df = mri_df.copy()\n",
-    "save_single_dataset('sMRI_MCI_NC', mcinc_mri_df, 'MCI')"
+    "save_single_dataset('../training/MCI_NC/data/sMRI_MCI_NC', mcinc_mri_df, 'MCI')"
    ]
   },
   {
@@ -3861,7 +3861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -3893,7 +3893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -3908,7 +3908,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3920,7 +3920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -4062,7 +4062,7 @@
        "[4459 rows x 5 columns]"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4082,7 +4082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4099,7 +4099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -4108,7 +4108,7 @@
        "<AxesSubplot:xlabel='MMSE', ylabel='CDRSB'>"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4132,7 +4132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -4283,7 +4283,7 @@
        "[4459 rows x 5 columns]"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4303,7 +4303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -4312,7 +4312,7 @@
        "<AxesSubplot:xlabel='CDRSB', ylabel='ADAS11'>"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4335,7 +4335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -4366,7 +4366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -4496,7 +4496,7 @@
        "[4459 rows x 4 columns]"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4516,12 +4516,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "adnc_neuro_df = neuro_df.copy()\n",
-    "save_single_dataset('Neuro_AD_NC', adnc_neuro_df, 'AD')"
+    "save_single_dataset('../training/MCI_NC/data/Neuro_AD_NC', adnc_neuro_df, 'AD')"
    ]
   },
   {
@@ -4533,12 +4533,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "mcinc_neuro_df = neuro_df.copy()\n",
-    "save_single_dataset('Neuro_MCI_NC', mcinc_neuro_df, 'MCI')"
+    "save_single_dataset('../training/MCI_NC/data/Neuro_MCI_NC', mcinc_neuro_df, 'MCI')"
    ]
   },
   {
@@ -4551,7 +4551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -4578,7 +4578,7 @@
        "Length: 138, dtype: int64"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4607,7 +4607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -4737,7 +4737,7 @@
        "[4459 rows x 4 columns]"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4748,7 +4748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -5392,7 +5392,7 @@
        "[4459 rows x 36 columns]"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5403,7 +5403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -6107,7 +6107,7 @@
        "[4459 rows x 41 columns]"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6121,7 +6121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -6492,7 +6492,7 @@
        "5   229719.9112  234663.5521        10331.10389  "
       ]
      },
-     "execution_count": 179,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6500,13 +6500,13 @@
    "source": [
     "# Save AD/HC dataset\n",
     "ad_hc_df = final_df.drop(final_df[final_df.MCI == 1].index)\n",
-    "ad_hc_df.to_csv('ADNI_AD_NC.csv', encoding='utf-8', index=False)\n",
+    "ad_hc_df.to_csv('../training/AD_NC/data/ADNI_AD_NC.csv', encoding='utf-8', index=False)\n",
     "ad_hc_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -6877,7 +6877,7 @@
        "16   248189.8130  243893.8560        10466.54019  "
       ]
      },
-     "execution_count": 180,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6885,13 +6885,13 @@
    "source": [
     "# Save MCI/HC dataset\n",
     "mci_hc_df = final_df.drop(final_df[final_df.AD == 1].index)\n",
-    "mci_hc_df.to_csv('ADNI_MCI_NC.csv', encoding='utf-8', index=False)\n",
+    "mci_hc_df.to_csv('../training/MCI_NC/data/ADNI_MCI_NC.csv', encoding='utf-8', index=False)\n",
     "mci_hc_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6909,8 +6909,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Final Dataset Summary"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -6936,7 +6943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -7482,7 +7489,7 @@
        "max    290421.921800       14006.381560  "
       ]
      },
-     "execution_count": 183,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7493,7 +7500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -8039,7 +8046,7 @@
        "max    286431.708700       14337.272370  "
       ]
      },
-     "execution_count": 184,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8050,7 +8057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -8596,7 +8603,7 @@
        "max    299183.521400       14260.142390  "
       ]
      },
-     "execution_count": 185,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
