--- a/preprocessing/ADNI_preprocessing.ipynb
+++ b/preprocessing/ADNI_preprocessing.ipynb
@@ -403,6 +403,111 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MCI</th>\n",
+       "      <th>AD</th>\n",
+       "      <th>Age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>4459.000000</td>\n",
+       "      <td>4459.000000</td>\n",
+       "      <td>4459.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.469388</td>\n",
+       "      <td>0.228527</td>\n",
+       "      <td>75.180110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.499118</td>\n",
+       "      <td>0.419931</td>\n",
+       "      <td>7.157632</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>48.100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>70.896235</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>75.300000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>80.387337</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>95.620534</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               MCI           AD          Age\n",
+       "count  4459.000000  4459.000000  4459.000000\n",
+       "mean      0.469388     0.228527    75.180110\n",
+       "std       0.499118     0.419931     7.157632\n",
+       "min       0.000000     0.000000    48.100000\n",
+       "25%       0.000000     0.000000    70.896235\n",
+       "50%       0.000000     0.000000    75.300000\n",
+       "75%       1.000000     0.000000    80.387337\n",
+       "max       1.000000     1.000000    95.620534"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "demo_df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [
@@ -3861,7 +3966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -3893,7 +3998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -3908,7 +4013,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3920,7 +4025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -4062,7 +4167,7 @@
        "[4459 rows x 5 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4071,6 +4176,120 @@
     "# Drop CDR since it is all NAN\n",
     "neuro_df = neuro_df.drop(['CDR'], axis=1)\n",
     "neuro_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MMSE</th>\n",
+       "      <th>CDRSB</th>\n",
+       "      <th>ADAS11</th>\n",
+       "      <th>ADAS13</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>4449.000000</td>\n",
+       "      <td>4427.000000</td>\n",
+       "      <td>4431.000000</td>\n",
+       "      <td>4388.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>26.701731</td>\n",
+       "      <td>1.967811</td>\n",
+       "      <td>11.216719</td>\n",
+       "      <td>17.419690</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>3.649406</td>\n",
+       "      <td>2.336819</td>\n",
+       "      <td>7.907640</td>\n",
+       "      <td>10.850247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>5.670000</td>\n",
+       "      <td>9.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>28.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>15.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>29.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>14.670000</td>\n",
+       "      <td>23.670000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>66.000000</td>\n",
+       "      <td>73.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              MMSE        CDRSB       ADAS11       ADAS13\n",
+       "count  4449.000000  4427.000000  4431.000000  4388.000000\n",
+       "mean     26.701731     1.967811    11.216719    17.419690\n",
+       "std       3.649406     2.336819     7.907640    10.850247\n",
+       "min       2.000000     0.000000     0.000000     0.000000\n",
+       "25%      25.000000     0.000000     5.670000     9.000000\n",
+       "50%      28.000000     1.000000     9.000000    15.000000\n",
+       "75%      29.000000     3.000000    14.670000    23.670000\n",
+       "max      30.000000    17.000000    66.000000    73.000000"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "neuro_df.describe()"
    ]
   },
   {
@@ -4505,6 +4724,111 @@
     "# Want to drop CDRSB as it is used for patients who have AD\n",
     "neuro_df = neuro_df.drop(['CDRSB'], axis=1)\n",
     "neuro_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MMSE</th>\n",
+       "      <th>ADAS11</th>\n",
+       "      <th>ADAS13</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>4459.000000</td>\n",
+       "      <td>4459.000000</td>\n",
+       "      <td>4459.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>26.694390</td>\n",
+       "      <td>11.235172</td>\n",
+       "      <td>17.580846</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>3.654175</td>\n",
+       "      <td>7.909281</td>\n",
+       "      <td>11.150400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>5.670000</td>\n",
+       "      <td>9.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>28.000000</td>\n",
+       "      <td>9.330000</td>\n",
+       "      <td>15.330000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>29.000000</td>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>24.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>66.000000</td>\n",
+       "      <td>94.135797</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              MMSE       ADAS11       ADAS13\n",
+       "count  4459.000000  4459.000000  4459.000000\n",
+       "mean     26.694390    11.235172    17.580846\n",
+       "std       3.654175     7.909281    11.150400\n",
+       "min       2.000000     0.000000     0.000000\n",
+       "25%      25.000000     5.670000     9.000000\n",
+       "50%      28.000000     9.330000    15.330000\n",
+       "75%      29.000000    15.000000    24.000000\n",
+       "max      30.000000    66.000000    94.135797"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "neuro_df.describe()"
    ]
   },
   {
