up to date notebooks

--- a/training/MCI_NC/lime-explainer.ipynb
+++ b/training/MCI_NC/lime-explainer.ipynb
@@ -2,14 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "from interpret.blackbox import LimeTabular\n",
     "from interpret import show\n",
     "from lime import lime_tabular\n",
-    "import pickle"
+    "import pickle\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "# Bring utils package onto the path\n",
+    "import sys, os\n",
+    "sys.path.append(os.path.abspath(os.path.join('..')))\n",
+    "from utils import DataLoader, RunModel"
    ]
   },
   {
@@ -28,20 +35,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rf, X_train, X_test, y_train, y_test = pickle.load(open('models/ADNI_MCI_NC', 'rb'))"
+    "rf, X_train, X_test, y_train, y_test = pickle.load(open('models/best_model', 'rb'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature_names = X_train.columns.values.tolist()"
+    "feature_names = X_train.columns.values.tolist()\n",
+    "rf = rf.model"
    ]
   },
   {
@@ -53,26 +61,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp = lime_tabular.LimeTabularExplainer(X_train.values, feature_names=feature_names, class_names=['NC', 'MCI'], mode='classification')\n"
+    "exp = lime_tabular.LimeTabularExplainer(X_train.values, feature_names=feature_names, class_names=['NC', 'MCI'], mode='classification')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning:\n",
-      "\n",
-      "X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
-      "\n"
+      "/usr/local/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "  warnings.warn(\n"
      ]
     },
     {
@@ -37169,10 +37175,10 @@
        "/***/ })\n",
        "/******/ ]);\n",
        "//# sourceMappingURL=bundle.js.map </script></head><body>\n",
-       "        <div class=\"lime top_div\" id=\"top_divG29EDDKL42GBOYZ\"></div>\n",
+       "        <div class=\"lime top_div\" id=\"top_divIHRDL0IL2GABEPW\"></div>\n",
        "        \n",
        "        <script>\n",
-       "        var top_div = d3.select('#top_divG29EDDKL42GBOYZ').classed('lime top_div', true);\n",
+       "        var top_div = d3.select('#top_divIHRDL0IL2GABEPW').classed('lime top_div', true);\n",
        "        \n",
        "            var pp_div = top_div.append('div')\n",
        "                                .classed('lime predict_proba', true);\n",
@@ -37184,10 +37190,10 @@
        "            var exp = new lime.Explanation([\"NC\", \"MCI\"]);\n",
        "        \n",
        "                exp_div = top_div.append('div').classed('lime explanation', true);\n",
-       "                exp.show([[\"ADAS13 > 18.00\", 0.16356528260750602], [\"ADAS11 > 11.00\", 0.0653918649355676], [\"RightHippocampus <= 2893.07\", 0.035196467135725704], [\"LeftHippocampus <= 2706.96\", 0.034911334786032366], [\"RightCelebellumExterior > 52364.59\", 0.017024535464276524], [\"70.60 < Age <= 75.10\", -0.011951879194748603], [\"Cerebellar Vermis > 10547.18\", -0.00905435321253319], [\"27.00 < MMSE <= 29.00\", -0.008065550165605184], [\"RightCaudate <= 2959.31\", -0.00781928796552205], [\"13511.89 < RightCerebellumWhiteMatter <= 15193.68\", 0.0077236315775626296]], 1, exp_div);\n",
+       "                exp.show([[\"ADAS13 > 18.00\", 0.15843505909984723], [\"ADAS11 > 11.00\", 0.06691744607428683], [\"RightHippocampus <= 2893.07\", 0.03845248502822938], [\"LeftHippocampus <= 2706.96\", 0.03681152888716712], [\"70.60 < Age <= 75.10\", -0.015306794541093991], [\"RightCelebellumExterior > 52364.59\", 0.011749284965158454], [\"983.43 < RightAmygdala <= 1116.60\", 0.01037203855484815], [\"2221.19 < 4thVentricle <= 2672.33\", -0.009024040566765364], [\"LeftCaudate <= 2841.73\", -0.007964724097390902], [\"RightCaudate <= 2959.31\", -0.0075933435198330575]], 1, exp_div);\n",
        "                \n",
        "        var raw_div = top_div.append('div');\n",
-       "            exp.show_raw_tabular([[\"ADAS13\", \"20.33\", 0.16356528260750602], [\"ADAS11\", \"11.33\", 0.0653918649355676], [\"RightHippocampus\", \"2792.88\", 0.035196467135725704], [\"LeftHippocampus\", \"2545.21\", 0.034911334786032366], [\"RightCelebellumExterior\", \"56490.93\", 0.017024535464276524], [\"Age\", \"74.70\", -0.011951879194748603], [\"Cerebellar Vermis\", \"12810.25\", -0.00905435321253319], [\"MMSE\", \"28.00\", -0.008065550165605184], [\"RightCaudate\", \"2600.81\", -0.00781928796552205], [\"RightCerebellumWhiteMatter\", \"14344.87\", 0.0077236315775626296]], 1, raw_div);\n",
+       "            exp.show_raw_tabular([[\"ADAS13\", \"20.33\", 0.15843505909984723], [\"ADAS11\", \"11.33\", 0.06691744607428683], [\"RightHippocampus\", \"2792.88\", 0.03845248502822938], [\"LeftHippocampus\", \"2545.21\", 0.03681152888716712], [\"Age\", \"74.70\", -0.015306794541093991], [\"RightCelebellumExterior\", \"56490.93\", 0.011749284965158454], [\"RightAmygdala\", \"1059.00\", 0.01037203855484815], [\"4thVentricle\", \"2311.80\", -0.009024040566765364], [\"LeftCaudate\", \"2394.39\", -0.007964724097390902], [\"RightCaudate\", \"2600.81\", -0.0075933435198330575]], 1, raw_div);\n",
        "        \n",
        "        </script>\n",
        "        </body></html>"
@@ -37207,17 +37213,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning:\n",
-      "\n",
-      "X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
-      "\n"
+      "/usr/local/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "  warnings.warn(\n"
      ]
     },
     {
@@ -74314,10 +74318,10 @@
        "/***/ })\n",
        "/******/ ]);\n",
        "//# sourceMappingURL=bundle.js.map </script></head><body>\n",
-       "        <div class=\"lime top_div\" id=\"top_div2MWBCBCSFKT3776\"></div>\n",
+       "        <div class=\"lime top_div\" id=\"top_divF3IJF45ITII16AA\"></div>\n",
        "        \n",
        "        <script>\n",
-       "        var top_div = d3.select('#top_div2MWBCBCSFKT3776').classed('lime top_div', true);\n",
+       "        var top_div = d3.select('#top_divF3IJF45ITII16AA').classed('lime top_div', true);\n",
        "        \n",
        "            var pp_div = top_div.append('div')\n",
        "                                .classed('lime predict_proba', true);\n",
@@ -74329,10 +74333,10 @@
        "            var exp = new lime.Explanation([\"NC\", \"MCI\"]);\n",
        "        \n",
        "                exp_div = top_div.append('div').classed('lime explanation', true);\n",
-       "                exp.show([[\"8.00 < ADAS13 <= 12.33\", -0.07224797089970782], [\"MMSE <= 27.00\", 0.05355773161653995], [\"LeftHippocampus > 3357.89\", -0.040652374988350594], [\"RightHippocampus > 3523.12\", -0.039146768141119115], [\"75.10 < Age <= 80.00\", -0.026785461176232407], [\"5.00 < ADAS11 <= 7.67\", -0.02540219380543708], [\"4thVentricle > 2672.33\", -0.017739453943763955], [\"LeftInflatVentricle <= 816.87\", -0.015038974940020986], [\"LeftAmygdala > 1191.45\", -0.01273377122038512], [\"434.51 < LeftBasalForebrain <= 520.25\", 0.011623090854080744]], 1, exp_div);\n",
+       "                exp.show([[\"8.00 < ADAS13 <= 12.33\", -0.07432147385835007], [\"MMSE <= 27.00\", 0.05545938046341181], [\"LeftHippocampus > 3357.89\", -0.040999574862298716], [\"RightHippocampus > 3523.12\", -0.023672271256495125], [\"5.00 < ADAS11 <= 7.67\", -0.02288463518842689], [\"75.10 < Age <= 80.00\", -0.02225076985539592], [\"LeftInflatVentricle <= 816.87\", -0.01668146983457319], [\"4thVentricle > 2672.33\", -0.016257576541931752], [\"LeftAmygdala > 1191.45\", -0.013345718542200685], [\"6613.14 < LeftThalamusProper <= 6990.08\", -0.0115469161103101]], 1, exp_div);\n",
        "                \n",
        "        var raw_div = top_div.append('div');\n",
-       "            exp.show_raw_tabular([[\"ADAS13\", \"9.00\", -0.07224797089970782], [\"MMSE\", \"27.00\", 0.05355773161653995], [\"LeftHippocampus\", \"3961.83\", -0.040652374988350594], [\"RightHippocampus\", \"3921.73\", -0.039146768141119115], [\"Age\", \"76.43\", -0.026785461176232407], [\"ADAS11\", \"6.00\", -0.02540219380543708], [\"4thVentricle\", \"3788.05\", -0.017739453943763955], [\"LeftInflatVentricle\", \"691.50\", -0.015038974940020986], [\"LeftAmygdala\", \"1225.01\", -0.01273377122038512], [\"LeftBasalForebrain\", \"512.85\", 0.011623090854080744]], 1, raw_div);\n",
+       "            exp.show_raw_tabular([[\"ADAS13\", \"9.00\", -0.07432147385835007], [\"MMSE\", \"27.00\", 0.05545938046341181], [\"LeftHippocampus\", \"3961.83\", -0.040999574862298716], [\"RightHippocampus\", \"3921.73\", -0.023672271256495125], [\"ADAS11\", \"6.00\", -0.02288463518842689], [\"Age\", \"76.43\", -0.02225076985539592], [\"LeftInflatVentricle\", \"691.50\", -0.01668146983457319], [\"4thVentricle\", \"3788.05\", -0.016257576541931752], [\"LeftAmygdala\", \"1225.01\", -0.013345718542200685], [\"LeftThalamusProper\", \"6656.12\", -0.0115469161103101]], 1, raw_div);\n",
        "        \n",
        "        </script>\n",
        "        </body></html>"
@@ -74352,7 +74356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -74408,8 +74412,8 @@
     {
      "data": {
       "text/html": [
-       "<!-- http://127.0.0.1:7077/4997609840/ -->\n",
-       "<iframe src=\"http://127.0.0.1:7077/4997609840/\" width=100% height=800 frameBorder=\"0\"></iframe>"
+       "<!-- http://127.0.0.1:7001/4980904000/ -->\n",
+       "<iframe src=\"http://127.0.0.1:7001/4980904000/\" width=100% height=800 frameBorder=\"0\"></iframe>"
       ]
      },
      "metadata": {},
