--- a/training/MCI_NC/rf-training.ipynb
+++ b/training/MCI_NC/rf-training.ipynb
@@ -74,8 +74,25 @@
    "source": [
     "print(\"MRI Data - MCI TO NC\")\n",
     "mri_rf, mri_X_train, mri_X_test, mri_y_train, mri_y_test = train_dataset('sMRI_MCI_NC', 'MCI')\n",
-    "mri_rf.save_model('models/sMRI_RF', mri_X_train, mri_X_test, mri_y_train, mri_y_test)\n",
+    "# mri_rf.save_model('models/sMRI_RF', mri_X_train, mri_X_test, mri_y_train, mri_y_test)\n",
     "print(f\"Accuracy: {mri_rf.accuracy}. F1-Score: {mri_rf.f1}. AUC: {mri_rf.auc}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved.\n"
+     ]
+    }
+   ],
+   "source": [
+    "mri_rf.save_obj('models/mri_rf', mri_X_train, mri_X_test, mri_y_train, mri_y_test)"
    ]
   },
   {
@@ -98,8 +115,25 @@
    "source": [
     "print(\"Neuro Data - MCI TO NC\")\n",
     "neuro_rf, neuro_X_train, neuro_X_test, neuro_y_train, neuro_y_test = train_dataset('Neuro_MCI_NC', 'MCI')\n",
-    "neuro_rf.save_model('models/neuro_RF', neuro_X_train, neuro_X_test, neuro_y_train, neuro_y_test)\n",
+    "# neuro_rf.save_model('models/neuro_RF', neuro_X_train, neuro_X_test, neuro_y_train, neuro_y_test)\n",
     "print(f\"Accuracy: {neuro_rf.accuracy}. F1-Score: {neuro_rf.f1}. AUC: {neuro_rf.auc}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved.\n"
+     ]
+    }
+   ],
+   "source": [
+    "neuro_rf.save_obj('models/neuro_rf', neuro_X_train, neuro_X_test, neuro_y_train, neuro_y_test)"
    ]
   },
   {
@@ -129,8 +163,25 @@
    "source": [
     "print(\"Multimodal Data - MCI TO NC\")\n",
     "multimodal_rf, X_train, X_test, y_train, y_test = train_dataset('ADNI_MCI_NC', 'MCI')\n",
-    "multimodal_rf.save_model('models/ADNI_MCI_NC', X_train, X_test, y_train, y_test)\n",
+    "# multimodal_rf.save_model('models/ADNI_MCI_NC', X_train, X_test, y_train, y_test)\n",
     "print(f\"Accuracy: {multimodal_rf.accuracy}. F1-Score: {multimodal_rf.f1}. AUC: {multimodal_rf.auc}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved.\n"
+     ]
+    }
+   ],
+   "source": [
+    "multimodal_rf.save_obj('models/fusion_rf', X_train, X_test, y_train, y_test)"
    ]
   },
   {
