--- a/training/AD_NC/lime-explainer.ipynb
+++ b/training/AD_NC/lime-explainer.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rf, X_train, X_test, y_train, y_test = pickle.load(open('models/ADNI_AD_NC', 'rb'))"
+    "rf, X_train, X_test, y_train, y_test = pickle.load(open('models/best_model', 'rb'))"
    ]
   },
   {
