--- a/training/feature-importance.ipynb
+++ b/training/feature-importance.ipynb
@@ -66,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rf, X_train, X_test, y_train, y_test = pickle.load(open('AD_NC/models/ADNI_AD_NC', 'rb'))\n",
+    "rf, X_train, X_test, y_train, y_test = pickle.load(open('AD_NC/models/best_model', 'rb'))\n",
     "feature_list = X_train.columns.values.tolist()"
    ]
   },
@@ -98,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rf, X_train, X_test, y_train, y_test = pickle.load(open('MCI_NC/models/ADNI_MCI_NC', 'rb'))\n",
+    "rf, X_train, X_test, y_train, y_test = pickle.load(open('MCI_NC/models/best_model', 'rb'))\n",
     "feature_list = X_train.columns.values.tolist()"
    ]
   },
