--- a/training/AD_NC/rf-training.ipynb
+++ b/training/AD_NC/rf-training.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score, f1_score, roc_curve, roc_auc_score, confusion_matrix, ConfusionMatrixDisplay\n",
@@ -24,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,9 +41,7 @@
     "    data_loader = DataLoader()\n",
     "    data_loader.load_data(f\"data/{filename}.csv\")\n",
     "    X_train, X_test, y_train, y_test = data_loader.get_data_split(label=label)\n",
-    "    print(f'Training data: {X_train.shape}')\n",
-    "    print(f'Testing data: {X_test.shape}')\n",
-    "    \n",
+    "\n",
     "    rf = RunModel()\n",
     "    rf.run_model(X_train, X_test, y_train)\n",
     "    rf.model_performance(X_test , y_test)\n",
@@ -50,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -58,8 +65,6 @@
      "output_type": "stream",
      "text": [
       "MRI Data - AD TO NC\n",
-      "Training data: (3567, 35)\n",
-      "Testing data: (892, 35)\n",
       "Saved.\n",
       "Accuracy: 0.8452914798206278. F1-Score: 0.5576923076923077. AUC: 0.883378317588844\n"
      ]
@@ -74,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -82,8 +87,6 @@
      "output_type": "stream",
      "text": [
       "Neuro Data - AD TO NC\n",
-      "Training data: (3567, 3)\n",
-      "Testing data: (892, 3)\n",
       "Saved.\n",
       "Accuracy: 0.7399103139013453. F1-Score: 0.18309859154929578. AUC: 0.5266194331983807\n"
      ]
@@ -122,6 +125,8 @@
    "source": [
     "print(\"Multimodal Data - AD TO NC\")\n",
     "multimodal_rf, X_train, X_test, y_train, y_test = train_dataset('ADNI_AD_NC', 'AD')\n",
+    "print(f'Training data: {X_train.shape}')\n",
+    "print(f'Testing data: {X_test.shape}')\n",
     "# multimodal_rf.save_model('models/ADNI_AD_NC', X_train, X_test, y_train, y_test)\n",
     "print(f\"Accuracy: {multimodal_rf.accuracy}. F1-Score: {multimodal_rf.f1}. AUC: {multimodal_rf.auc}\")"
    ]
